SOU (incomplete), (6) ROA Opt. Actions pgs + Issue Fixes
Previous 3 Committed changes in CSS and jQuery need to be implemented in order for these files to work in the application.
-- Screenreader attributes added to Quill Editors
-- Update CSS for Standard Modals
-- Fixed typo in HTML: Color Claim / BW alert
-- Fixed ‘Submit selected files’ aria lable to ‘Submit selected file’
-- statement_of_use.html is incomplete, lacking functionality for 'delete Class', committing at ST request because not having it committed is a blocker.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ FONTS/.DS_Store
 ViewerJS/ViewerJS/.DS_Store
 ViewerJS/ViewerJS/.DS_Store
 js/clearfileupload.js
+ViewerJS/ViewerJS/.DS_Store
+ViewerJS/ViewerJS/.DS_Store
